trying out materialize

--- a/_posts/2010-01-06-testing.markdown
+++ b/_posts/2010-01-06-testing.markdown
@@ -8,7 +8,28 @@ tags: [example, another example, a third example]
 # image: content/music-antelope-valley.jpg
 ---
 
+
+### Something
+
+<ul class="collapsible" data-collapsible="accordion">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+    </li>
+  </ul>
+  
+
+<!-- this is the the thing that includes the content
 {% include _tips/testing.markdown %}
+-->
 
 #### Embed this research strategy
 
