--- a/_posts/2010-01-06-testing.markdown
+++ b/_posts/2010-01-06-testing.markdown
@@ -8,6 +8,17 @@ tags: [example, another example, a third example]
 # image: content/music-antelope-valley.jpg
 ---
 
+<div class="fixed-action-btn click-to-toggle">
+    <a class="btn-floating btn-large blue lighten-1">
+      <i class="large material-icons">share</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating green lighten-1" href="#"><i class="material-icons">code</i>Embed this tip.</a>
+      </li>
+        
+    </ul>
+</div>
+        
 
 ### Something
 
@@ -27,10 +38,18 @@ tags: [example, another example, a third example]
   </ul>
   
 
+{% include embed-code.html %}
+
+<hr>
+<hr>
+
 <!-- this is the the thing that includes the content
 {% include _tips/testing.markdown %}
 -->
 
+        
+
+<!-- previous embed approach
 #### Embed this research strategy
 
 Would you like to embed this research strategy into your own site? Just copy and paste the code below. <a href="{{ site.url }}/embeds{{ page.url }}" target="_blank">Preview</a>
@@ -40,3 +59,4 @@ Would you like to embed this research strategy into your own site? Just copy and
 <iframe src="{{ site.url }}/embeds{{ page.url }}" width="80%" height="600px"></iframe>
 
 ```
+-->
