--- a/_posts/2010-01-07-zotero.markdown
+++ b/_posts/2010-01-07-zotero.markdown
@@ -14,11 +14,11 @@ tags:
 <!-- Maybe here in the "diagram" space we can put 3 cool things you can do with Zotero with just text and images? -->
 
   <div class="row">
-    <div class="col s12 m4">
+    <div class="col s12 m6">
       <div class="card" style="height: 100%;">
         <!-- I think the side-by-side gifs might have made for too much motion on the screen. What do you think about stills? -->
         <div class="card-image">
-          <img style="max-height: 144px;" src="https://www.evernote.com/l/AN_wWphBniRDZ5ZAu2mY8n_emBfxLcOoGpQB/image.png" alt="Zotero library organized by class, paper, and topic">
+          <img src="{{ '/assets/img/content/zotero-project-folders_150.png' | prepend: site.baseurl }}" alt="Zotero libraries can be organized by class, paper, and topic">
         </div>
         <div class="card-content">
         <span class="card-title">Organize your sources</span>
@@ -26,10 +26,10 @@ tags:
         </div>
       </div>
     </div>
-   <div class="col s12 m4">
+   <div class="col s12 m6">
       <div class="card">
         <div class="card-image">
-          <img style="max-height: 144px;" src="https://www.evernote.com/l/AN9k1FX-_nRDJZ6Iz1vqF_LtFo_jD1j_sC4B/image.png" alt="Zotero's plug-in for word allows you to create citations while writing a paper.">
+          <img src="{{ '/assets/img/content/zotero-citations.png' | prepend: site.baseurl }}" alt="Zotero's plug-in for word allows you to create citations while writing a paper.">
         </div>
         <div class="card-content">
           <span class="card-title">Cite as you write</span>
@@ -37,6 +37,7 @@ tags:
         </div>
       </div>
     </div>
+    <!--
     <div class="col s12 m4">
       <div class="card">
         <div class="card-image">
@@ -49,15 +50,17 @@ tags:
       </div>
     </div>
   </div> 
-            
-### Give it a try:
+  -->
+<h3>&nbsp;</h3>
+
+<h3>Give it a try:</h3>
 
 <p class="flow-text">Want to get started? Check out our <a href="http://uclalibrary.github.io/slides/tutorial-zotero-intro.html#/" target="_blank">Zotero tutorial</a>:</p>
 
 <center>
   <iframe class="embedbox" src="https://uclalibrary.github.io/slides/tutorial-zotero-intro.html" width="95%" height="600px"></iframe>
 </center>
-
+<!--
 <ul class="collapsible" data-collapsible="expandable">
     <li>
       <div class="collapsible-header"><i class="material-icons">forum</i>Want to talk about it? Set up a <em>free research consultation</em> to get help developing your ideas:</div>
@@ -67,3 +70,7 @@ tags:
       </div>
     </li>
   </ul>
+  -->
+  
+<h5>Image credits</h5>
+<em>Raincloud Folder, data folder, Leaf Folder by <a href="https://thenounproject.com/linseedstudio/" target="_blank">Linseed Studio</a>, and Quote by <a href="https://thenounproject.com/i/" target="_blank">irene hoffman</a> from the Noun Project</em>.
