--- a/_posts/2010-01-07-zotero.markdown
+++ b/_posts/2010-01-07-zotero.markdown
@@ -3,10 +3,11 @@ layout: post
 title:  "Get Started with Zotero"
 date:   2010-01-07
 description: Learn how to use Zotero, a free and easy citation tool. 
-category: Zotero
+handout: 
+category: Finding and Citing Sources
 tags:
 - zotero
-- research 
+- citation management software 
 ---
 
 <p class="intro">With Zotero, you'll never have to stress again about making a properly-formatted bibliography! Zotero makes collecting, organizing, and analyzing your research sources easy. This tutorial will help you navigate the application and offer some neat tips and tricks for utilizing Zotero!</p>
