--- a/_posts/2009-12-17-test.markdown
+++ b/_posts/2009-12-17-test.markdown
@@ -49,7 +49,7 @@ tags:
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="images/sample-1.jpg">
+          <img src="img/content/website.png">
           <span class="card-title">Website, YouTube, Social Media</span>
         </div>
         <div class="card-content">
@@ -63,7 +63,7 @@ tags:
    <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="images/sample-1.jpg">
+          <img src="img/content/ccle.png">
           <span class="card-title">CCLE Integration</span>
         </div>
         <div class="card-content">
@@ -77,7 +77,7 @@ tags:
    <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="images/sample-1.jpg">
+          <img src="img/content/googledoc.png">
           <span class="card-title">Research Notebook</span>
         </div>
         <div class="card-content">
@@ -91,7 +91,7 @@ tags:
    <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="images/sample-1.jpg">
+          <img src="img/content/integration.png">
           <span class="card-title">Custom Projects</span>
         </div>
         <div class="card-content">
