--- a/_posts/2009-12-17-test.markdown
+++ b/_posts/2009-12-17-test.markdown
@@ -46,7 +46,7 @@ tags:
   
   
   <div class="row">
-    <div class="col s12 m7">
+    <div class="col s12 m6 l3">
       <div class="card">
         <div class="card-image">
           <img src="img/content/website.png">
@@ -60,7 +60,7 @@ tags:
         </div>
       </div>
     </div>
-   <div class="col s12 m7">
+   <div class="col s12 m6 l3">
       <div class="card">
         <div class="card-image">
           <img src="img/content/ccle.png">
@@ -74,7 +74,7 @@ tags:
         </div>
       </div>
     </div>
-   <div class="col s12 m7">
+   <div class="col s12 m6 l3">
       <div class="card">
         <div class="card-image">
           <img src="img/content/googledoc.png">
@@ -88,7 +88,7 @@ tags:
         </div>
       </div>
     </div>
-   <div class="col s12 m7">
+   <div class="col s12 m6 l3">
       <div class="card">
         <div class="card-image">
           <img src="img/content/integration.png">
