finalizing layout, one name change

--- a/_posts/2018-05-03-design-jam-1.md
+++ b/_posts/2018-05-03-design-jam-1.md
@@ -6,7 +6,7 @@ background: /assets/images/WI+RE-Design-Jam-1.jpg
 authors:
     - Shannon
     - Taylor
-    - Doug
+    - doug-worsham
     - Kian
 author: The WI+RE Team
 contributors:
