--- a/_tutorials/2017-01-15-zotero.markdown
+++ b/_tutorials/2017-01-15-zotero.markdown
@@ -51,6 +51,8 @@ core-competencies:
 tags:
 - zotero
 - citation management software 
+- bibliography
+- annotated bibliography
 ---
 
 <p class="intro">With Zotero, you'll never have to stress again about making a properly-formatted bibliography! Zotero makes collecting, organizing, and analyzing your research sources easy. This tutorial will help you navigate the application and offer some neat tips and tricks for utilizing Zotero!</p>
