update Zotero tutorial

--- a/_tutorials/2017-01-15-zotero.markdown
+++ b/_tutorials/2017-01-15-zotero.markdown
@@ -27,6 +27,7 @@ contributors:
     - Bethany Meyers
     - Annie Pho
     - Miriam Posner
+    - kian-ravaei
     - Alicia Reiley
     - renee-romero
     - Annelie Rugg
