Update 11.3.2022.CV.Cover Letter.Resume Tutorial.md

--- a/_tutorials/11.3.2022.CV.Cover Letter.Resume Tutorial.md
+++ b/_tutorials/11.3.2022.CV.Cover Letter.Resume Tutorial.md
@@ -123,7 +123,7 @@ acrl-frames:
 # List a few keywords related to the resource that will help users search for it.
 #
 tags:
-    - tag 1
+    - tag cv
     - tag 2
 ---
 
